amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/inexistent-union-member.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/inexistent-union-member.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/core#unresolved-reference
  Message: Unresolved reference 'Dog'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/inexistent-union-member.api.graphql/union/default-union/unresolved
  Property: 
  Range: 
  Location: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/inexistent-union-member.api.graphql
